--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,28 @@
 body {
-  margin-left: 45px;
+  margin-left: 20px;
+  margin-right: 20px;
   font-size: 13px;
   font-family: "Roboto", sans-serif;
 }
 
 h1 {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: -6px;
   font-family: "Prata", serif;
 }
 
 h3 {
   font-family: "Prata", serif;
   margin-bottom: 20px;
+  margin-right: 40px;
 }
 
+.welcome {
+  font-family: "Prata", serif;
+  font-size: 17px;
+  margin-bottom: 10px;
+  margin-left: 145px;
+}
 .container {
   margin: 0;
   padding: 0;
@@ -79,6 +87,7 @@ h3 {
   border-radius: 4px;
   box-shadow: 2px 2px 2px lightgrey;
   border: 0.5px solid lightgrey;
+  margin-left: 10px;
 }
 
 @media (max-width: 1024px) {
@@ -93,6 +102,27 @@ h3 {
 }
 
 @media (max-width: 576px) {
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     text-align: center;
   }
+
+  .welcome {
+    text-align: center;
+    margin-left: 0;
+    margin-top: 17px;
+  }
+
+  .introduction,
+  .show-information {
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .introduction {
+    max-width: 535px;
+    margin-top: 25px;
+  }
+}
