--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   background-image: url("/img/backgroundimage.jpeg");
   background-size: cover;
   background-attachment: fixed;
-  width: 100%;
+  width: device-width;
 }
 
 h1 {
