--- a/src/style.css
+++ b/src/style.css
@@ -7,44 +7,42 @@ body {
   background-image: url("/img/backgroundimage.jpeg");
   background-size: cover;
   background-attachment: fixed;
-  width: device-width;
+  width: 100%;
 }
 
 h1 {
   margin-top: 30px;
-  margin-bottom: -6px;
+  margin-left: 30px;
   font-family: "Prata", serif;
 }
 
-h3 {
+h2 {
   font-family: "Prata", serif;
   margin-bottom: 20px;
-  margin-right: 40px;
   padding-top: 15px;
+}
+
+p {
+  width: 50%;
+  font-size: 14px;
 }
 
 .welcome {
   font-family: "Prata", serif;
   font-size: 17px;
   margin-bottom: 10px;
-  margin-left: 145px;
+  margin-left: 30px;
   text-decoration: underline;
   text-decoration-color: #eeff01;
   text-decoration-thickness: 11px;
-}
-
-.introduction {
-  margin-top: 27px;
-  margin-bottom: 17px;
+  line-height: 2;
 }
 
 .left {
-  margin-left: 0px;
+  margin-left: 100px;
 }
 
 .container {
-  margin: 0;
-  padding: 0;
   font-size: 13px;
   line-height: 1.7;
 }
@@ -123,7 +121,6 @@ h3 {
 .white {
   color: white;
 }
-
 @media (max-width: 1024px) {
   .container {
     font-size: 13px;
@@ -132,10 +129,6 @@ h3 {
   .previous {
     font-size: 13px;
     margin-bottom: 15px;
-  }
-
-  body {
-    width: device-width;
   }
 }
 
@@ -163,13 +156,17 @@ h3 {
   }
 
   body {
-    width: device-width;
+    width: 100%;
   }
 }
 
 @media (max-width: 576px) {
   h1 {
     text-align: center;
+  }
+
+  .row {
+    margin-left: 0px;
   }
 
   .welcome {
@@ -193,8 +190,8 @@ h3 {
     text-align: center;
   }
 
-  .container {
-    margin-left: 12px;
+  div.container {
+    padding: 0px;
     text-align: center;
     font-size: 9px;
   }
@@ -212,17 +209,14 @@ h3 {
   .clickable-item {
     font-size: 10px;
   }
-
-  body {
-    width: device-width;
-  }
 }
 
 @media (max-width: 280px) {
   .col-3 {
     font-size: 8px;
   }
-  body {
-    width: device-width;
+
+  .row {
+    margin-left: 0px;
   }
 }
