--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,8 @@ a.clickable-item-subsite {
 
 .col-1 {
   font-weight: 700;
-  margin-right: 12px;
+  margin-right: 20px;
+  margin-left: -8px;
 }
 
 .background-1 {
@@ -149,6 +150,29 @@ footer a.clickable-item {
   text-decoration: underline;
 }
 
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: black;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.dot-no {
+  height: 25px;
+  width: 25px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+img {
+  border: 1px solid transparent;
+  border-radius: 100px;
+}
+
 @media (min-width: 1024px) {
   p {
     width: 60%;
@@ -211,6 +235,11 @@ footer a.clickable-item {
   .clickable-item-subsite {
     color: white;
   }
+
+  .dots {
+    padding-right: 50px;
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -259,8 +288,23 @@ footer a.clickable-item {
   footer {
     margin-top: 50px;
   }
+
+  .dots {
+    padding-left: 90px;
+    padding-right: 90px;
+  }
+
+  .gap {
+    margin-top: 20px;
+  }
 }
 
+@media (max-width: 540px) {
+  .dots {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
 @media (max-width: 320px) {
   h2 {
     font-size: 2px;
@@ -282,6 +326,11 @@ footer a.clickable-item {
   a.clickable-item {
     margin-left: 0px;
     font-size: 11px;
+  }
+
+  .dots {
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
@@ -307,5 +356,10 @@ footer a.clickable-item {
 
   .col-1 {
     margin-right: 0px;
+  }
+
+  .dots {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
