--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-  margin-top: 30px;
+  margin-top: 60px;
   margin-left: 30px;
   font-family: "Prata", serif;
 }
@@ -206,6 +206,10 @@ img {
 }
 
 @media (max-width: 768px) {
+  h1 {
+    margin-top: 30px;
+  }
+
   p {
     width: 60%;
     font-size: 17px;
@@ -239,6 +243,7 @@ img {
   h1 {
     text-align: center;
     margin-left: 0px;
+    margin-top: 30px;
   }
 
   p {
@@ -293,12 +298,20 @@ img {
 }
 
 @media (max-width: 540px) {
-  .dots {
-    padding-left: 100px;
-    padding-right: 100px;
+  h1 {
+    margin-top: 30px;
   }
 }
+.dots {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
 @media (max-width: 320px) {
+  h1 {
+    margin-top: 30px;
+  }
+
   h2 {
     font-size: 2px;
   }
@@ -328,6 +341,10 @@ img {
 }
 
 @media (max-width: 280px) {
+  h1 {
+    margin-top: 30px;
+  }
+
   h2 {
     font-size: 19px;
   }
